--- a/views/dashboard.html
+++ b/views/dashboard.html
@@ -135,7 +135,7 @@
                     </div>
 
                     <div class="card-title">
-                        <img src="../img/rdc-dashboard.jpg" alt="">
+                        <img src="../img/dashboard-rdc.png" alt="">
                         <div class="course-title">
                             <h4>Redes de Computadores</h4>
                             <div class="professor">
@@ -153,7 +153,7 @@
                             </div>
                             <div class="course-information">
                                 <span class="material-icons-sharp">timer</span>
-                                <h5>14:00 - 18:00</h5>
+                                <h5>09:00 - 10:00</h5>
                             </div>
                         </div>
 
@@ -176,7 +176,48 @@
                     </div>
 
                     <div class="card-title">
-                        <img src="../img/cpi-dashboard.jpg" alt="">
+                        <img src="../img/dashboard-ldp.png" alt="">
+                        <div class="course-title">
+                            <h4>Lógica de Programação</h4>
+                            <div class="professor">
+                                <span class="material-icons-sharp">person</span>
+                                <h5>Ione Goulart</h5>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="card-legend">
+                        <div>
+                            <div class="course-information">
+                                <span class="material-icons-sharp">calendar_today</span>
+                                <h5>Terça</h5>
+                            </div>
+                            <div class="course-information">
+                                <span class="material-icons-sharp">timer</span>
+                                <h5>14:00 - 18:00</h5>
+                            </div>
+                        </div>
+
+                        <div>
+                            <div class="course-information">
+                                <span class="material-icons-sharp">calendar_today</span>
+                                <h5>Sexta</h5>
+                            </div>
+                            <div class="course-information">
+                                <span class="material-icons-sharp">timer</span>
+                                <h5>16:00 - 18:00</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="course-card">
+                    <div class="acess-button">
+                        <span class="material-icons-sharp">navigate_next</span>
+                    </div>
+
+                    <div class="card-title">
+                        <img src="../img/dashboard-cpi.png" alt="">
                         <div class="course-title">
                             <h4>Construção de Páginas</h4>
                             <div class="professor">
@@ -194,7 +235,7 @@
                             </div>
                             <div class="course-information">
                                 <span class="material-icons-sharp">timer</span>
-                                <h5>14:00 - 18:00</h5>
+                                <h5>10:00 - 11:00</h5>
                             </div>
                         </div>
 
@@ -202,47 +243,6 @@
                             <div class="course-information">
                                 <span class="material-icons-sharp">calendar_today</span>
                                 <h5>Quinta</h5>
-                            </div>
-                            <div class="course-information">
-                                <span class="material-icons-sharp">timer</span>
-                                <h5>14:00 - 18:00</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="course-card">
-                    <div class="acess-button">
-                        <span class="material-icons-sharp">navigate_next</span>
-                    </div>
-
-                    <div class="card-title">
-                        <img src="../img/rdc-dashboard.jpg" alt="">
-                        <div class="course-title">
-                            <h4>Redes de Computadores</h4>
-                            <div class="professor">
-                                <span class="material-icons-sharp">person</span>
-                                <h5>Diogénes Reis</h5>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="card-legend">
-                        <div>
-                            <div class="course-information">
-                                <span class="material-icons-sharp">calendar_today</span>
-                                <h5>Segunda</h5>
-                            </div>
-                            <div class="course-information">
-                                <span class="material-icons-sharp">timer</span>
-                                <h5>14:00 - 18:00</h5>
-                            </div>
-                        </div>
-
-                        <div>
-                            <div class="course-information">
-                                <span class="material-icons-sharp">calendar_today</span>
-                                <h5>Segunda</h5>
                             </div>
                             <div class="course-information">
                                 <span class="material-icons-sharp">timer</span>
@@ -360,8 +360,15 @@
 
         <section id="right">
             <div class="calendar">
-                <h3>Janeiro 2022</h3>
-                <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FSao_Paulo&src=Z2VvdmFuaS5zaWx2YUBlc3R1ZGFudGUuaWZiLmVkdS5icg&src=Y19jbGFzc3Jvb20yNjFhM2E0OUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%230047a8" " width="290" height="220" frameborder="1" scrolling="no"></iframe>
+                <div class="calendar-month">
+                    <span class="material-icons-sharp">navigate_before </span>
+                    <h3>Fevereiro 2022</h3>
+                    <span class="material-icons-sharp">navigate_next</span>
+                </div>
+                <div class="calendar-week">
+                </div>
+                <div class="calendar-day">
+                </div>
             </div>
 
             <div class="aulas">
